Fix: swagger docs response
